@@ -7,6 +7,7 @@ CHANGES
 
 - Fixed Section meeting time misalignment in calendar (https://launchpad.net/bugs/611797)
 - Added BooFieldDescription for boolean demographic fields
+- Added limit_group_ids list to IFieldDescription and filter_group_id method to IDemographicsFields
 
 
 1.5.2 (2010-10-04)
